# guile-epoxy

./: .gitignore  Makefile.am  README.md  configure.ac  env.in  generate.scm  guile-epoxy-egl.c  guile-epoxy-gl.c  guile-epoxy.c  meson.build  meson_options.txt
.reuse/: dep5
epoxy/: common.scm  config.scm.in  egl.scm  gles2.scm  meson.build
epoxy/egl/: commands.scm  enums.scm
epoxy/gl/: commands.scm  enums.scm
tests/: egl-gles2.scm
